# libpfm4

./: Makefile.am  configure.ac
docs/: Makefile.mk
examples/: Makefile.mk
include/: Makefile.mk
lib/: Makefile.mk
maint/: version.m4
perf_examples/: Makefile.mk
tests/: Makefile.mk
